// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentMethodInput.vue should not trigger input event if new value is set programmatically 1`] = `
<div
  class="v-input payment-method-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--single-line v-select"
  eager="true"
>
  <div
    class="v-input__prepend-outer"
  >
    <div
      class="v-input__icon v-input__icon--prepend"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light"
      >
        credit_card
      </i>
    </div>
  </div>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="list-53"
      class="v-input__slot"
      role="button"
    >
      <div
        class="v-select__slot"
      >
        <div
          class="v-select__selections"
        >
          
    Debit Card
  
          <input
            aria-readonly="true"
            id="input-53"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      >
        <div
          class="v-menu__content theme--light v-menu__content--auto "
          style="max-height: 200px; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
        >
          <div
            class="v-select-list v-card theme--light"
            id="list-53"
          >
            <div
              class="v-list v-sheet v-sheet--tile theme--light"
              id="list-53"
              role="listbox"
              tabindex="-1"
            >
              <div
                aria-labelledby="debit-list-item-59"
                aria-selected="true"
                class="v-list-item primary--text v-list-item--active v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Debit Card
  
              </div>
              <div
                aria-labelledby="credit-list-item-59"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Credit Card
  
              </div>
              <div
                aria-labelledby="cash-list-item-59"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Cash
  
              </div>
              <div
                aria-labelledby="dkv_card-list-item-59"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Fuel Card
  
              </div>
              <div
                aria-labelledby="paypal-list-item-59"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    PayPal
  
              </div>
              <div
                aria-labelledby="online-list-item-59"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Online
  
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaymentMethodInput.vue should not trigger input event if new value is set programmatically 2`] = `
<div
  class="v-input payment-method-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--single-line v-select"
  eager="true"
>
  <div
    class="v-input__prepend-outer"
  >
    <div
      class="v-input__icon v-input__icon--prepend"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light"
      >
        credit_card
      </i>
    </div>
  </div>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="list-53"
      class="v-input__slot"
      role="button"
    >
      <div
        class="v-select__slot"
      >
        <div
          class="v-select__selections"
        >
          
    Credit Card
  
          <input
            aria-readonly="true"
            id="input-53"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      >
        <div
          class="v-menu__content theme--light v-menu__content--auto "
          style="max-height: 200px; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
        >
          <div
            class="v-select-list v-card theme--light"
            id="list-53"
          >
            <div
              class="v-list v-sheet v-sheet--tile theme--light"
              id="list-53"
              role="listbox"
              tabindex="-1"
            >
              <div
                aria-labelledby="debit-list-item-59"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Debit Card
  
              </div>
              <div
                aria-labelledby="credit-list-item-59"
                aria-selected="true"
                class="v-list-item primary--text v-list-item--active v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Credit Card
  
              </div>
              <div
                aria-labelledby="cash-list-item-59"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Cash
  
              </div>
              <div
                aria-labelledby="dkv_card-list-item-59"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Fuel Card
  
              </div>
              <div
                aria-labelledby="paypal-list-item-59"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    PayPal
  
              </div>
              <div
                aria-labelledby="online-list-item-59"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Online
  
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaymentMethodInput.vue should render correctly 1`] = `
<div
  class="v-input payment-method-input v-input--hide-details theme--light v-text-field v-text-field--single-line v-select"
  eager="true"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="list-4"
      class="v-input__slot"
      role="button"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label theme--light"
          for="input-4"
          style="left: 0px; position: absolute;"
        >
          Payment method
        </label>
        <div
          class="v-select__selections"
        >
          <input
            aria-readonly="true"
            id="input-4"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      >
        <div
          class="v-menu__content theme--light v-menu__content--auto "
          style="max-height: 200px; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
        >
          <div
            class="v-select-list v-card theme--light"
            id="list-4"
          >
            <div
              class="v-list v-sheet v-sheet--tile theme--light"
              id="list-4"
              role="listbox"
              tabindex="-1"
            >
              <div
                aria-labelledby="debit-list-item-9"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Debit Card
  
              </div>
              <div
                aria-labelledby="credit-list-item-9"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Credit Card
  
              </div>
              <div
                aria-labelledby="cash-list-item-9"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Cash
  
              </div>
              <div
                aria-labelledby="dkv_card-list-item-9"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Fuel Card
  
              </div>
              <div
                aria-labelledby="paypal-list-item-9"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    PayPal
  
              </div>
              <div
                aria-labelledby="online-list-item-9"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Online
  
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaymentMethodInput.vue should render correctly with value 1`] = `
<div
  class="v-input payment-method-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--single-line v-select"
  eager="true"
>
  <div
    class="v-input__prepend-outer"
  >
    <div
      class="v-input__icon v-input__icon--prepend"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light"
      >
        credit_card
      </i>
    </div>
  </div>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="list-20"
      class="v-input__slot"
      role="button"
    >
      <div
        class="v-select__slot"
      >
        <div
          class="v-select__selections"
        >
          
    Debit Card
  
          <input
            aria-readonly="true"
            id="input-20"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      >
        <div
          class="v-menu__content theme--light v-menu__content--auto "
          style="max-height: 200px; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
        >
          <div
            class="v-select-list v-card theme--light"
            id="list-20"
          >
            <div
              class="v-list v-sheet v-sheet--tile theme--light"
              id="list-20"
              role="listbox"
              tabindex="-1"
            >
              <div
                aria-labelledby="debit-list-item-26"
                aria-selected="true"
                class="v-list-item primary--text v-list-item--active v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Debit Card
  
              </div>
              <div
                aria-labelledby="credit-list-item-26"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Credit Card
  
              </div>
              <div
                aria-labelledby="cash-list-item-26"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Cash
  
              </div>
              <div
                aria-labelledby="dkv_card-list-item-26"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Fuel Card
  
              </div>
              <div
                aria-labelledby="paypal-list-item-26"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    PayPal
  
              </div>
              <div
                aria-labelledby="online-list-item-26"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Online
  
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaymentMethodInput.vue should update v-model correctly 1`] = `
<div
  class="v-input payment-method-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-focused theme--light v-text-field v-text-field--single-line v-text-field--is-booted v-select primary--text"
  eager=""
>
  <div
    class="v-input__prepend-outer"
  >
    <div
      class="v-input__icon v-input__icon--prepend"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light primary--text"
      >
        credit_card
      </i>
    </div>
  </div>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="list-71"
      class="v-input__slot"
      role="button"
    >
      <div
        class="v-select__slot"
      >
        <div
          class="v-select__selections"
        >
          
    Debit Card
  
          <input
            aria-readonly="true"
            id="input-71"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light primary--text"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      >
        <div
          class="v-menu__content theme--light v-menu__content--auto "
          style="max-height: 200px; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 8; display: none;"
        >
          <div
            class="v-select-list v-card theme--light"
            id="list-71"
          >
            <div
              class="v-list v-sheet v-sheet--tile theme--light"
              id="list-71"
              role="listbox"
              tabindex="-1"
            >
              <div
                aria-labelledby="debit-list-item-89"
                aria-selected="true"
                class="v-list-item primary--text v-list-item--active v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Debit Card
  
              </div>
              <div
                aria-labelledby="credit-list-item-89"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Credit Card
  
              </div>
              <div
                aria-labelledby="cash-list-item-89"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Cash
  
              </div>
              <div
                aria-labelledby="dkv_card-list-item-89"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Fuel Card
  
              </div>
              <div
                aria-labelledby="paypal-list-item-89"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    PayPal
  
              </div>
              <div
                aria-labelledby="online-list-item-89"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                
    Online
  
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
